--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="password">Password</string>
     <string name="sign_in">SIgn In</string>
     <string name="todo">TODO</string>
+    <string name="signup">SIgn Up</string>
 </resources>
